Eliminating errors and warnings reported by Javascript Lint

--- a/background.html
+++ b/background.html
@@ -103,7 +103,6 @@ function TweetManager() {
 
   this.initIconAndAlerts();
 
-  var _this = this;
   this.twitterBackend = new TwitterLib(
     function onAuthenticated() {
       TimelineTemplate.initAfterAuthentication();
@@ -124,8 +123,7 @@ function TweetManager() {
     OptionsBackend.get('base_signing_url'),
     OptionsBackend.get('base_oauth_signing_url'),
     OptionsBackend.get('base_search_url'),
-    this.oauthTokenData
-  );
+    this.oauthTokenData);
 
   this.sendQueue = new SendQueue(this.twitterBackend);
 }
@@ -270,9 +268,9 @@ TweetManager.prototype = {
 
   /* Lists timelines won't be included as they'll only be shown later */
   orderedEachTimeline: function(callback, includeLists) {
-    var retList = [];
-    for(var tId in this.timelines) {
-      var timeline = this.timelines[tId];
+    var retList = [], tId, timeline;
+    for(tId in this.timelines) {
+      timeline = this.timelines[tId];
       if(!includeLists && timeline.template.id == TimelineTemplate.LISTS) {
         continue;
       }
@@ -287,9 +285,9 @@ TweetManager.prototype = {
       }
     }
     for(var i = 0; i < retList.length; ++i) {
-      var tId = retList[i];
+      tId = retList[i];
       if(tId) {
-        var timeline = this.timelines[tId];
+        timeline = this.timelines[tId];
         if(timeline.template.visible) {
           var ret = callback.call(tId, timeline);
           if(ret === false) {
@@ -360,7 +358,7 @@ TweetManager.prototype = {
       }
     }, true);
     var totalUnreadNewCount = this.unique(totalUnreadNewIds).length;
-    if(colors.length == 0) {
+    if(colors.length === 0) {
       chrome.browserAction.setTitle({title: "Chromed Bird"});
       chrome.browserAction.setIcon({imageData: IconCreator.paintIcon(this.iconImg, OptionsBackend.get('idle_color'))});
       chrome.browserAction.setBadgeText({text: ''});
@@ -385,7 +383,7 @@ TweetManager.prototype = {
   },
 
   showTweetsNotifications: function(tweetsToNotify, forceOnPage) {
-    if(!tweetsToNotify || tweetsToNotify.length == 0) {
+    if(!tweetsToNotify || tweetsToNotify.length === 0) {
       return;
     }
     var maxTweetsNotifications = OptionsBackend.get('notification_max_popups');
@@ -424,8 +422,7 @@ TweetManager.prototype = {
 
         for(var i = 0; i < tweetsToNotify.length; ++i) {
           var notification = notificationCenter.createHTMLNotification(
-            chrome.extension.getURL('tweets_notifier.html')
-          );
+            chrome.extension.getURL('tweets_notifier.html'));
           (function inClosure(tweet) {
             notification.onclose = function(e) {
               setTimeout(function() {
@@ -538,8 +535,6 @@ TweetManager.prototype = {
   getTweet: function(callback, id) {
     var _this = this;
     return this.twitterBackend.showTweet(function(success, data, status) {
-      if(success) {
-      }
       callback(success, data, status);
     }, id);
   },
@@ -661,6 +656,7 @@ TweetManager.prototype = {
       return null;
     }
     timeline.changeList(listId);
+    return undefined;
   },
 
   getListId: function(timelineId) {
@@ -706,7 +702,7 @@ TweetManager.prototype = {
     var timeline = this.timelines[timelineId];
     if(!timeline) {
       callback([], timelineId);
-      return;
+      return undefined;
     }
     if(syncNew && timeline.template.includeInUnified) {
       var originalCallback = callback;
@@ -780,8 +776,8 @@ TweetManager.prototype = {
 
   onHitsUpdated: function(remainingHits, nextHitsReset, hourlyLimit) {
     var nextResetDate = new Date();
-    nextResetDate.setTime(parseInt(nextHitsReset) * 1000);
-    if(remainingHits == 0) {
+    nextResetDate.setTime(parseInt(nextHitsReset, 10) * 1000);
+    if(remainingHits === 0) {
       this.autoClearWarning = true;
       this.setWarning(chrome.i18n.getMessage("exceededAPIHits", [chrome.extension.getURL('options.html'), nextResetDate.toLocaleDateString(), nextResetDate.toLocaleTimeString()]));
       return;
@@ -798,7 +794,7 @@ TweetManager.prototype = {
       }
     }
 
-    this.apiHitsStates.push([(new Date()).getTime(), parseInt(remainingHits)]);
+    this.apiHitsStates.push([(new Date()).getTime(), parseInt(remainingHits, 10)]);
     if(this.apiHitsStates.length > this.maxApiHitsStates) {
       this.apiHitsStates.shift();
     }
@@ -867,7 +863,7 @@ TweetManager.prototype = {
   getUsersToComplete: function() {
     return this.followingUsers;
   }
-}
+};
 
 /* Clean up old versions mess */
 Persistence.cleanupOldData();
@@ -879,8 +875,8 @@ function compareVersions(v1, v2) {
   for(var i = 0; i < maxLen; ++i) {
     if(v1[i] === undefined) return -1;
     if(v2[i] === undefined) return 1;
-    if(parseInt(v1[i]) > parseInt(v2[i])) return 1;
-    if(parseInt(v1[i]) < parseInt(v2[i])) return -1;
+    if(parseInt(v1[i], 10) > parseInt(v2[i], 10)) return 1;
+    if(parseInt(v1[i], 10) < parseInt(v2[i], 10)) return -1;
   }
   return 0;
 }
@@ -890,6 +886,7 @@ function checkVersionChanges(manifest) {
     var currentVersion = manifest.version.split('.');
     var storageData = Persistence.version();
     var storageVersion = storageData.val();
+    var options, baseUrl;
     if(storageVersion) {
       storageVersion = JSON.parse(storageVersion);
     } else {
@@ -898,12 +895,12 @@ function checkVersionChanges(manifest) {
       return;
     }
 
-    if(compareVersions(currentVersion, storageVersion) != 0) {
+    if(compareVersions(currentVersion, storageVersion) !== 0) {
       // if last version is < 1.3.0
       if(compareVersions(storageVersion, [1, 3, 0]) < 0) {
         //Old default refresh interval, let's update it for the new version
         if(OptionsBackend.get('home_refresh_interval') == 60000) {
-          var options = OptionsBackend.load();
+          options = OptionsBackend.load();
           options['home_refresh_interval'] = OptionsBackend.defaultOptions['home_refresh_interval'];
           OptionsBackend.save(options);
         }
@@ -920,8 +917,8 @@ function checkVersionChanges(manifest) {
         timelineOrderData.save(JSON.stringify(storedOrder));
       }
       if(compareVersions(storageVersion, [1, 6, 1]) <= 0) {
-        var options = OptionsBackend.load();
-        var baseUrl = options['base_url'];
+        options = OptionsBackend.load();
+        baseUrl = options['base_url'];
         if(baseUrl.match(/http:\/\/twitter\.com/)) {
           options['base_url'] = 'http://api.twitter.com/1/';
           options['base_signing_url'] = 'http://api.twitter.com/1/';
@@ -960,7 +957,7 @@ function checkVersionChanges(manifest) {
           initializeJQueryOptions();
         }
 
-        var baseUrl = OptionsBackend.get('base_url');
+        baseUrl = OptionsBackend.get('base_url');
         var baseSigningUrl = OptionsBackend.get('base_signing_url');
         if(baseUrl == baseSigningUrl && baseUrl == 'http://api.twitter.com/1/') {
           // This days the SSL endpoint seems more reliable, let's make it the
