--- a/tweets_notifier.html
+++ b/tweets_notifier.html
@@ -33,8 +33,8 @@
 
     setTimeout(function() {
       $("#progress").text(chrome.i18n.getMessage("preventClosing"));
-      $('#progress').show().css('bottom', '0px').css('width', '100%')
-            .animate({width: '0px'}, fadeTimeout, 'linear', function() {
+      $('#progress').show().css('bottom', '0px').css('width', '100%').
+          animate({width: '0px'}, fadeTimeout, 'linear', function() {
         // Tell manager that this tweet shouldn't be marked as read
         tweetManager.shouldNotReadMap[tweet.id] = true;
         window.close();
